--- a/django_project/frontend/package.json
+++ b/django_project/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.2.1",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "ajv": "^8.12.0",
     "axios": "^1.2.5",
     "dayjs": "^1.11.7",
     "ethers": "^5.7.2",
